--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,23 +1,19 @@
 <!-- Login Form -->
-      <div class="card mb-3">
-        <div class="card-header text-primary fw-bold fs-5">Login</div>
-        <div class="card-body">
-          <form>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label"
-                >Username</label
-              >
-              <input type="text" class="form-control" />
-            </div>
-            <div class="mb-3">
-              <label for="exampleInputPassword1" class="form-label"
-                >Password</label
-              >
-              <input type="password" class="form-control" />
-            </div>
-          </form>
-          <button type="submit" class="btn btn-primary">Login!</button>
-        </div>
+<div class="card mb-3">
+  <div class="card-header text-primary fw-bold fs-5">Login</div>
+  <div class="card-body">
+    <form class="login-form">
+      <div class="mb-3">
+        <label for="username-login" class="form-label">Username</label>
+        <input type="text" class="form-control" id="username-login" />
       </div>
+      <div class="mb-3">
+        <label for="password-login" class="form-label">Password</label>
+        <input type="password" class="form-control" id="password-login"/>
+      </div>
+    </form>
+    <button type="submit" class="btn btn-primary">Login!</button>
+  </div>
+</div>
 
 <script src="./js/login.js"></script>
