connect the handlebars with the event listeners

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,11 +16,13 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="/css/style.css">
     <title>Tech Blog</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light mb-5">
       <div class="container">
+        {{!-- {{#if logged_in}} --}}
         <a
           class="navbar-brand shadow-sm p-2 bg-body rounded border border-primary text-primary fw-bold"
           href="#"
@@ -37,29 +39,33 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
+        {{!-- {{/if}} --}}
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Dashboard</a>
+              <a class="nav-link" href="/dashboard">Dashboard</a>
             </li>
+             {{#if logged_in}}
             <li class="nav-item">
-              <a class="nav-link" href="#">Login</a>
+              <a class="nav-link" id="logout" href="/">Logout [{{username}}]</a>
             </li>
+              {{else}}
             <li class="nav-item">
-              <a class="nav-link" href="#">Logout</a>
+              <a class="nav-link" href="/login">Login</a>
             </li>
+              {{/if}}
           </ul>
         </div>
       </div>
     </nav>
 
-    <div class="main container">
+    <main class="main container">
       <!-- Render the sub layout -->
      {{{  body }}}
-    </div>
+    </main>
    
   <!-- Render script for logged in users only -->
   {{#if logged_in}}
