--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -2,7 +2,7 @@
 <div class="card mb-3">
   <div class="card-header text-primary fw-bold fs-5">Login</div>
   <div class="card-body">
-    <form class="login-form">
+    <form id="login-form">
       <div class="mb-3">
         <label for="username-login" class="form-label">Username</label>
         <input type="text" class="form-control" id="username-login" />
