--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,7 +2,7 @@
 <div class="card mb-3">
   <div class="card-header text-primary fw-bold fs-5">SignUp</div>
   <div class="card-body">
-    <form class="signup-form">
+    <form id="signup-form">
       <div class="mb-3">
         <label
           for="username-signup"
