connected the login and signup with the backend

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,8 +11,11 @@
         <label for="password-login" class="form-label">Password</label>
         <input type="password" class="form-control" id="password-login"/>
       </div>
+      <div>
+        <button type="submit" class="btn btn-primary">Login!</button>
+        <a href="/signup" id="signup-link"></a>
+      </div>
     </form>
-    <button type="submit" class="btn btn-primary">Login!</button>
   </div>
 </div>
 
