--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -23,8 +23,9 @@
         <label for="password-signup" class="form-label">Password</label>
         <input type="password" class="form-control" id="password-signup"/>
       </div>
+       <button type="submit" class="btn btn-primary mb-3">SignUp!</button>
+       <a href="/login" id="login-link"></a>
     </form>
-    <button type="submit" class="btn btn-primary mb-3">SignUp!</button>
   </div>
 </div>
 
