--- a/views/new-post.handlebars
+++ b/views/new-post.handlebars
@@ -8,11 +8,11 @@
         <input type="Username" id="post-title" name="post-title" class="form-control" />
       </div>
       <div class="mb-3">
-        <label for="content" class="form-label">Content</label>
+        <label for="post_text" class="form-label">Content</label>
         <textarea
           class="form-control"
           id="content"
-          name="content"
+          name="post_text"
           rows="2"
         ></textarea>
       </div>
