--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,4 @@
 {{#if posts.length}}
-<h2>Your Posts</h2>
 <ul>
     {{#each posts as |post|}}
     <li>
@@ -9,6 +8,6 @@
 </ul>
 {{/if}}
 
-<button type="submit" class="btn btn-primary"><a class="link" href="/dashboard/newpost">+ New Post</a></button>
+<button id="new-trigger" type="submit" class="btn btn-primary mb-3">+ New Post</button>
 
-<script src="/js/add-post.js"></script>
+<script src="/js/dashboard.js"></script>
