--- a/views/partials/dashboard-post-info.handlebars
+++ b/views/partials/dashboard-post-info.handlebars
@@ -1,12 +1,13 @@
 <!-- Post Form -->
       <div class="card mb-3">
         <div class="card-header text-primary fw-bold fs-5">{{title}}
-          <h6 class="text-end">Posted by {{user.name}} on {{format_date created_at}}</h6>
+          <h6 class="text-end">Posted by {{user.username}} on {{format_date created_at}}</h6>
         </div>
         <div class="card-body">
           <p>
             {{post_text}}
           </p>
         </div>
-        <h4><a class="link" href="/dashboard/edit/{{id}}">{{title}}</a></h4>
+        <a href="/dashboard/edit/{{id}}">Update your post</a>
       </div>
+      
