--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -4,16 +4,19 @@
 <!-- Comment Form -->
 <div class="card mb-3">
   <div class="card-header text-primary fw-bold fs-5 mb-3">Comment</div>
-    <div class="mb-3">
-        <form class="card-body" id="comment-form">
-            <textarea class="form-control mb-3" name="comment-body" rows="3"></textarea>
-            <button type="submit" class="btn btn-primary">Submit!</button>
-        </form>
+  <div class="mb-3">
+    <form class="card-body" id="comment-form">
+      <textarea
+        name="comment-body"
+        class="form-control mb-3"
+        rows="3"
+      ></textarea>
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
   </div>
 </div>
 {{/if}}
 
-{{> comments post.comments}}
 
 {{#if logged_in}}
 <script src="/js/comment.js"></script>
