--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -7,5 +7,7 @@
           <p>
             {{post_text}}
           </p>
+          <a href="/post/{{id}}">{{comments.length}}
+          {{format_plural "comment" comment.length}}</a>
         </div>
       </div>
