--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
 ul {
-    list-style: none;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+#new-trigger {
+  position: relative;
+  left: 44%;
 }
