--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -20,13 +20,30 @@
     <title>Tech Blog</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-light mb-5">
+     <nav class="navbar navbar-expand-lg bg-light mb-5">
       <div class="container">
-        {{!-- {{#if logged_in}} --}}
+        {{#if logged_in}}
         <a
           class="navbar-brand shadow-sm p-2 bg-body rounded border border-primary text-primary fw-bold"
           href="#"
-          >💻 Tech Blog</a
+          >💻 Dashboard</a
+        >
+         <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        {{else}}
+        <a
+          class="navbar-brand shadow-sm p-2 bg-body rounded border border-primary text-primary fw-bold"
+          href="#"
+          >💻 The Tech Blog</a
         >
         <button
           class="navbar-toggler"
@@ -39,7 +56,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        {{!-- {{/if}} --}}
+        {{/if}}
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
@@ -55,6 +72,9 @@
               {{else}}
             <li class="nav-item">
               <a class="nav-link" href="/login">Login</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="/signup">Signup</a>
             </li>
               {{/if}}
           </ul>
