added comment seeds

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
         {{#if logged_in}}
         <a
           class="navbar-brand shadow-sm p-2 bg-body rounded border border-primary text-primary fw-bold"
-          href="#"
+          href="/dashboard"
           >💻 Dashboard</a
         >
          <button
@@ -42,7 +42,7 @@
         {{else}}
         <a
           class="navbar-brand shadow-sm p-2 bg-body rounded border border-primary text-primary fw-bold"
-          href="#"
+          href="/"
           >💻 The Tech Blog</a
         >
         <button
