--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,6 +1,6 @@
 {{> post-info post}}
 
-{{!-- {{#if logged_in}} --}}
+{{#if logged_in}}
 <!-- Comment Form -->
 <div class="card mb-3">
   <div class="card-header text-primary fw-bold fs-5 mb-3">Comment</div>
@@ -15,7 +15,7 @@
     </form>
   </div>
 </div>
-{{!-- {{/if}} --}}
+{{/if}}
 
 {{>comments post.comments}}
 {{#if logged_in}}
