format comment so it match the rest of the page

--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,7 +1,7 @@
 <div class='comments'>
   {{#each this}}
   <div class="card mb-3">
-    <div class="card-header text-primary fw-bold fs-5">Posted by {{user.username}} on {{format_date created_at}}
+    <div class="card-header text-primary fw-bold fs-5">Commented by {{user.username}} on {{format_date created_at}}
     </div>
     <div class="card-body">
       <p>
