--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -8,6 +8,6 @@
             {{post_text}}
           </p>
           <a href="/post/{{id}}">{{comments.length}}
-          {{format_plural "comment" comment.length}}</a>
+          {{format_plural "comment" comments.length}}</a>
         </div>
       </div>
